--- a/index.html
+++ b/index.html
@@ -15,42 +15,44 @@
       --btnText:#ffffff;
     }
     *{ box-sizing:border-box; }
+
     body{
       margin:20px;
       font-family: Inter, Arial, sans-serif;
       background:var(--bg);
       color:var(--text);
     }
-    .wrap{ max-width:1200px; margin:0 auto; }
 
-    /* Compact header */
+    .wrap{
+      max-width:1280px;
+      margin:0 auto;
+    }
+
+    /* Centered heading area */
+    .hero{
+      text-align:center;
+      margin:0 0 18px;
+    }
+
     h1{
       margin:0;
-      font-size:44px;
+      font-size:56px;
       line-height:1.05;
       letter-spacing:-0.02em;
     }
+
     .sub{
-      margin:6px 0 14px;
+      margin:8px 0 0;
       color:#334155;
       font-size:18px;
     }
 
-    .notice{
-      margin:0 0 14px;
-      padding:8px 10px;
-      border:1px solid #dbeafe;
-      background:#eff6ff;
-      color:#1e3a8a;
-      border-radius:10px;
-      font-size:13px;
-    }
-
-    /* Compact responsive grid */
+    /* Force 4 per row on desktop */
     .grid{
       display:grid;
-      grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-      gap:12px;
+      grid-template-columns:repeat(4, minmax(0, 1fr));
+      gap:14px;
+      align-items:stretch;
     }
 
     .card{
@@ -61,11 +63,12 @@
       box-shadow:0 1px 2px rgba(0,0,0,.05);
       display:flex;
       flex-direction:column;
+      min-width:0;
     }
 
     .card img{
       width:100%;
-      aspect-ratio: 4 / 3;
+      aspect-ratio:4/3;
       object-fit:cover;
       display:block;
       background:#e2e8f0;
@@ -76,10 +79,11 @@
       display:flex;
       flex-direction:column;
       gap:6px;
+      min-height:138px;
     }
 
     .title{
-      font-size:16px;
+      font-size:17px;
       font-weight:800;
       line-height:1.2;
     }
@@ -88,16 +92,15 @@
       font-size:14px;
       color:#334155;
       line-height:1.35;
-      min-height:38px;
-
       display:-webkit-box;
       -webkit-line-clamp:2;
       -webkit-box-orient:vertical;
       overflow:hidden;
+      min-height:38px;
     }
 
     .vote-row{
-      margin-top:2px;
+      margin-top:auto;
       display:flex;
       align-items:center;
       justify-content:space-between;
@@ -109,7 +112,7 @@
       border-radius:9px;
       background:var(--btn);
       color:var(--btnText);
-      padding:7px 11px;
+      padding:7px 12px;
       font-size:13px;
       font-weight:700;
       cursor:pointer;
@@ -124,7 +127,7 @@
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
-      max-width:140px;
+      max-width:150px;
       text-align:right;
     }
 
@@ -132,29 +135,30 @@
       margin-top:12px;
       font-size:13px;
       color:var(--muted);
+      text-align:center;
       white-space:pre-wrap;
     }
 
-    @media (max-width:700px){
-      body{ margin:14px; }
-      h1{ font-size:34px; }
-      .sub{ font-size:16px; }
-      .grid{ grid-template-columns:repeat(2,minmax(0,1fr)); gap:10px; }
-      .vote-hint{ display:none; } /* cleaner on mobile */
+    /* Responsive breakpoints */
+    @media (max-width:1100px){
+      .grid{ grid-template-columns:repeat(3, minmax(0, 1fr)); }
     }
-
-    @media (max-width:460px){
+    @media (max-width:820px){
+      h1{ font-size:42px; }
+      .sub{ font-size:16px; }
+      .grid{ grid-template-columns:repeat(2, minmax(0, 1fr)); }
+    }
+    @media (max-width:520px){
       .grid{ grid-template-columns:1fr; }
+      .vote-hint{ display:none; }
     }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Mini Hoopers 🏀🐾</h1>
-    <p class="sub">Vote for your favorite approved entry.</p>
-
-    <div class="notice">
-      Voting UI is live. Final vote storage will connect to your <strong>Voting Bank</strong> sheet next.
+    <div class="hero">
+      <h1>Mini Hoopers 🏀🐾</h1>
+      <p class="sub">Vote for your favorite approved entry.</p>
     </div>
 
     <div id="gallery" class="grid"></div>
@@ -195,7 +199,8 @@
         if (!inQuotes && ch === '\r') continue;
         cur += ch;
       }
-      row.push(cur); rows.push(row);
+      row.push(cur);
+      rows.push(row);
 
       while (rows.length && rows[rows.length - 1].every(c => String(c || "").trim() === "")) rows.pop();
       return rows.map(r => r.map(c => String(c || "").trim()));
@@ -249,7 +254,7 @@
               <button class="vote-btn" data-id="${esc(item.id)}" ${selected ? "disabled" : ""}>
                 ${selected ? "Selected ✅" : "Vote"}
               </button>
-              <span class="vote-hint">${selected ? "Pending save" : "One selection for now"}</span>
+              <span class="vote-hint">${selected ? "Chosen" : "One selection"}</span>
             </div>
           </div>
         `;
