--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       aspect-ratio:4/3;
       object-fit:cover;
       display:block;
+      object-position:center 35%;
       background:#e2e8f0;
     }
 
