--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       --border:#e2e8f0;
       --btn:#0f172a;
       --btnText:#ffffff;
+      --success:#15803d;
     }
     *{ box-sizing:border-box; }
 
@@ -80,7 +81,7 @@
       display:flex;
       flex-direction:column;
       gap:6px;
-      min-height:138px;
+      min-height:150px;
     }
 
     .title{
@@ -120,7 +121,7 @@
       white-space:nowrap;
     }
     .vote-btn:hover{ opacity:.95; }
-    .vote-btn:disabled{ opacity:.65; cursor:not-allowed; }
+    .vote-btn:disabled{ opacity:.7; cursor:not-allowed; }
 
     .vote-hint{
       font-size:12px;
@@ -130,6 +131,14 @@
       text-overflow:ellipsis;
       max-width:150px;
       text-align:right;
+    }
+
+    .vote-success{
+      margin-top:6px;
+      font-size:12px;
+      color:var(--success);
+      font-weight:600;
+      line-height:1.3;
     }
 
     .status{
@@ -253,10 +262,11 @@
             <div class="caption" title="${esc(item.caption || "")}">${esc(item.caption || "")}</div>
             <div class="vote-row">
               <button class="vote-btn" data-id="${esc(item.id)}" ${selected ? "disabled" : ""}>
-                ${selected ? "Selected ✅" : "Vote"}
+                ${selected ? "Submitted ✅" : "Vote"}
               </button>
-              <span class="vote-hint">${selected ? "Chosen" : "One selection"}</span>
+              <span class="vote-hint">${selected ? "Vote recorded" : "One selection"}</span>
             </div>
+            ${selected ? `<div class="vote-success">Your vote has been submitted.</div>` : ""}
           </div>
         `;
 
